# bac_measurer

./: Cargo.toml  README.md
data/: effects.json
src/: bac.rs  drink.rs  effect.rs  lib.rs  person.rs
tests/: bac_tests.rs  drink_tests.rs  lib_tests.rs  person_tests.rs
