[package]
name = "bac-journal"
version = "0.1.0"
authors = ["aburd <burdick.aaron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
csv = "1.1.5"
measurements = "0.10.3"
serde = "1.0.118"
