[package]
name = "bac-journal"
version = "0.1.0"
authors = ["aburd <burdick.aaron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
measurements = "0.10.3"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
